--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-.calculator-container{
+#calculator-container{
     display: grid;
     grid-template-areas: 
     "textfield textfield textfield textfield textfield"
@@ -6,9 +6,9 @@
     "number number number number number"
     "number number number number number";
 }
-#operator{
+.operator{
     grid-area: operator;
 }
-#number{
+.number{
     grid-area: number;
 }
