--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@ html{
     display: grid;
     grid-template-areas: 
     "textfield textfield textfield textfield textfield"
-    "clear plus minus multiply divide"
+    "clear plus minus multip divide"
     "number number number number number"
     "number number number number number";
 }
@@ -19,7 +19,7 @@ html{
     grid-area: minus;
 }
 .multiply{
-    grid-area: multiply;
+    grid-area: multip;
 }
 .divide{
     grid-area: divide;
