--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@ html{
 }
 #calculator-container{
     display: grid;
+    grid-gap: 50px;
     grid-template-areas: 
     "textfield textfield textfield textfield textfield"
     "clear plus minus multip divide"
@@ -23,4 +24,7 @@ html{
 }
 #divide{
     grid-area: divide;
+}
+.operator{
+    border-radius:50%;
 }
