--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,7 @@ html{
     background-color: aquamarine;
 }
 #calculator-container{
+    width: 500px;
     display: grid;
     gap: 50px 15px;
     grid-template-areas: 
