--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ html{
 }
 .operator{
     background-color: #85F3F9;
-    border-radius:50%;
+    /*border-radius:50%;*/
     width: 40px;
     height: 40px;
 }
