--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@ html{
 #calculator-container{
     width: 500px;
     display: grid;
-    gap: 50px 15px;
+    /*gap: 50px 15px;*/
     grid-template-areas: 
     "textfield textfield textfield textfield textfield"
     "clear plus minus multip divide"
